--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
     </header>
 
     <section id="home">
+        <img src="IMG_7136.jpg" alt="Profile Image" style="float: right; width: 250px; height: auto;">
         <h1>Uwaise Ibna Islam</h1>
-        <p> Graduate Student | Software Engineer </p>
-        <p> Research focus: Bioinformatics and Computational Biology</p>
+        <p>Graduate Student | Software Engineer</p>
+        <p>Research focus: Bioinformatics and Computational Biology</p>
         <p>Email: <a href="mailto:uwaiseibna03@gmail.com">uwaiseibna03@gmail.com</a></p>
+        
     </section>
 
     <section id="about">
         <h2>Research Focus</h2>
-        <p>My research focuses on pioneering novel methodologies that fuse novel machine-learning techniques with complex biological data
+        <p >My research focuses on pioneering novel methodologies that fuse novel machine-learning techniques with complex biological data
             modeling. I aim to address complex bioinformatics challenges by leveraging the power of artificial intelligence to extract
             meaningful insights from large-scale biological datasets. I strive to enhance our understanding of biological systems and
             contribute to advancements in computational biology by proposing novel algorithms. My ultimate goal is to bridge the gap
